update docs, integrate CTA

--- a/site/_components/hero-animated.njk
+++ b/site/_components/hero-animated.njk
@@ -4,8 +4,8 @@
   Arguments:
     @param {object} heading: An object with the following attributes.
     @param {string} heading.default: Standard text, displayed in white.
-    @param {string} heading.accent (optional): Accented text, displayed in blue.
-    @param {Object} cta: Object containing the CTA info.
+    @param {string} heading.accent (optional): Accented text, displayed in tertiary blue.
+    @param {Object} cta (optional): Object containing the CTA info.
     @param {string} cta.text: The CTA's text.
     @param {string} cta.url: The CTA's URL.
     @param {Object} img: Object containing the background image.
