--- a/site/sass/components/_component-preview.scss
+++ b/site/sass/components/_component-preview.scss
@@ -19,4 +19,8 @@
     // This value was selected to be used on the style-guide page, it doesn't represent the actual value used on any other page on the site.
     max-width: pxRem(1440px);
   }
+
+  &--blue {
+    background-color: var(--secondary-blue);
+  }
 }
