💎(site) Add Sections Title to Stories Landing Page (#367)
* add sections title to stories landing

* fix typo

* clean up

* Update site/_components/stories-section.njk

Co-authored-by: Sam Richard <snugug@google.com>

* add stories to es data

* Update site/en/_data/stories.yml

Co-authored-by: Sam Richard <snugug@google.com>

* Update site/en/_data/stories.yml

Co-authored-by: Sam Richard <snugug@google.com>

* Update site/en/_data/stories.yml

Co-authored-by: Sam Richard <snugug@google.com>

* add spacing and icons

* fix prettier

* change border color base of designer feedback

* Update site/es/_data/stories.yml

Co-authored-by: Sam Richard <snugug@google.com>

* Update site/es/_data/stories.yml

Co-authored-by: Sam Richard <snugug@google.com>

* Update site/es/_data/stories.yml

Co-authored-by: Sam Richard <snugug@google.com>

* add max width to subtitle

* add logic to stories section

Co-authored-by: Sam Richard <snugug@google.com>

--- a/site/sass/components/_item-grid.scss
+++ b/site/sass/components/_item-grid.scss
@@ -116,22 +116,49 @@
 
   &--stories & {
     &__title {
+      margin-left: 0;
+      margin-right: unset;
+      margin-top: 0.625rem;
       max-width: unset;
+      text-align: left;
+
+      @include mq(430px) {
+        margin-left: 1rem;
+        margin-top: 0;
+      }
     }
 
-    &__title,
     &__subtitle {
+      max-width: 60ch;
       text-align: left;
     }
 
     &__content {
       gap: 2.5rem 1.25rem;
-      margin-bottom: 1.5rem;
-      margin-top: 1.5rem;
+      margin: clamp(2.5rem, 6vw, 3.5rem) 0;
 
       @include mq(1058px) {
-        grid-template-columns: repeat(auto-fit, minmax(pxRem(400px), 1fr));
+        grid-template-columns: repeat(auto-fill, minmax(pxRem(400px), 1fr));
       }
+    }
+
+    &__header {
+      display: flex;
+      flex-direction: column;
+
+      @include mq(430px) {
+        align-items: center;
+        flex-direction: row;
+      }
+
+      &:not(:first-child) {
+        margin-top: clamp(2.5rem, 6vw, 5rem);
+      }
+    }
+
+    &__icon {
+      height: 2.25rem;
+      width: 2.25rem;
     }
   }
 
