--- a/site/sass/globals/_colors.phosphor.scss
+++ b/site/sass/globals/_colors.phosphor.scss
@@ -2,117 +2,111 @@ $phosphor-green: '#33FF00';
 
 $phosphor-colors: (
   'blue-850': $phosphor-green,
-  // #1c50b9,
   'blue-800': $phosphor-green,
-  // #185abc,
   'blue-700': $phosphor-green,
-  // #1967d2,
   'blue-650': $phosphor-green,
-  // #3474e0,
   'blue-600': $phosphor-green,
-  // #1a73e8,
   'blue-500': $phosphor-green,
-  // #4285f4,
-  'blue-400': #669df6,
-  'blue-300': #8ab4f8,
-  'blue-250': #76c9fa,
-  'blue-200': #aecbfa,
-  'blue-100': #d2e3fc,
-  'blue-50': #e8f0fe,
-  'blue-25': #f4f8ff,
-  'red-900': #a50e0e,
-  'red-800': #b31412,
-  'red-750': #b2181b,
-  'red-700': #c5221f,
-  'red-650': #c84030,
-  'red-600': #d93025,
-  'red-500': #ea4335,
-  'red-400': #ee675c,
-  'red-300': #f28b82,
-  'red-200': #f6aea9,
-  'red-250': #fbb4a7,
-  'red-100': #fad2cf,
-  'red-50': #fce8e6,
-  'yellow-900': #e37400,
-  'yellow-800': #ea8600,
-  'yellow-750': #e98622,
-  'yellow-700': #f29900,
-  'yellow-600': #f9ab00,
-  'yellow-500': #fbbc04,
-  'yellow-450': #fbbd03,
-  'yellow-400': #fcc934,
-  'yellow-300': #fdd663,
-  'yellow-250': #ffde68,
-  'yellow-200': #fde293,
-  'yellow-100': #feefc3,
-  'yellow-50': #fef7e0,
-  'green-900': #0d652d,
-  'green-850': #1a7236,
-  'green-800': #137333,
-  'green-700': #188038,
-  'green-600': #1e8e3e,
-  'green-500': #34a853,
-  'green-450': #4bad4b,
-  'green-400': #5bb974,
-  'green-300': #81c995,
-  'green-250': #80db7a,
-  'green-200': #a8dab5,
-  'green-100': #ceead6,
-  'green-50': #e6f4ea,
-  'grey-1000': #000000,
-  'grey-900': #202124,
-  'grey-850': #2d2d2d,
-  'grey-800': #3c4043,
-  'grey-750': #505050,
-  'grey-700': #606367,
-  'grey-600': #80868b,
-  'grey-500': #9aa0a6,
-  'grey-400': #bdc1c6,
-  'grey-350': #c9c9c9,
-  'grey-300': #dadcdf,
-  'grey-200': #e8eaed,
-  'grey-150': #efefef,
-  'grey-100': #f1f3f4,
-  'grey-75': #f6f6f6,
-  'grey-50': #f8f9fa,
-  'orange-900': #b06000,
-  'orange-800': #c26401,
-  'orange-700': #d56e0c,
-  'orange-600': #e8710a,
-  'orange-500': #fa7b17,
-  'orange-400': #fa903e,
-  'orange-300': #fcad70,
-  'orange-200': #fdc69c,
-  'orange-100': #fedfc8,
-  'orange-50': #feefe3,
-  'pink-900': #9c166b,
-  'pink-800': #b80672,
-  'pink-700': #d01884,
-  'pink-600': #e52592,
-  'pink-500': #f439a0,
-  'pink-400': #ff63b8,
-  'pink-300': #ff8bcb,
-  'pink-200': #fba9d6,
-  'pink-100': #fdcfe8,
-  'pink-50': #fde7f3,
-  'purple-900': #681da8,
-  'purple-800': #7627bb,
-  'purple-700': #8430ce,
-  'purple-600': #9334e6,
-  'purple-500': #a142f4,
-  'purple-400': #af5cf7,
-  'purple-300': #c58af9,
-  'purple-200': #d7aefb,
-  'purple-100': #e9d2fd,
-  'purple-50': #f3e8fd,
-  'cyan-900': #007b83,
-  'cyan-800': #098591,
-  'cyan-700': #129eaf,
-  'cyan-600': #12b5cb,
-  'cyan-500': #24c1e0,
-  'cyan-400': #4ecde6,
-  'cyan-300': #78d9ec,
-  'cyan-200': #a1e4f2,
-  'cyan-100': #cbf0f8,
-  'cyan-50': #e4f7fb,
+  'blue-400': $phosphor-green,
+  'blue-300': $phosphor-green,
+  'blue-250': $phosphor-green,
+  'blue-200': $phosphor-green,
+  'blue-100': $phosphor-green,
+  'blue-50': $phosphor-green,
+  'blue-25': $phosphor-green,
+  'red-900': $phosphor-green,
+  'red-800': $phosphor-green,
+  'red-750': $phosphor-green,
+  'red-700': $phosphor-green,
+  'red-650': $phosphor-green,
+  'red-600': $phosphor-green,
+  'red-500': $phosphor-green,
+  'red-400': $phosphor-green,
+  'red-300': $phosphor-green,
+  'red-200': $phosphor-green,
+  'red-250': $phosphor-green,
+  'red-100': $phosphor-green,
+  'red-50': $phosphor-green,
+  'yellow-900': $phosphor-green,
+  'yellow-800': $phosphor-green,
+  'yellow-750': $phosphor-green,
+  'yellow-700': $phosphor-green,
+  'yellow-600': $phosphor-green,
+  'yellow-500': $phosphor-green,
+  'yellow-450': $phosphor-green,
+  'yellow-400': $phosphor-green,
+  'yellow-300': $phosphor-green,
+  'yellow-250': $phosphor-green,
+  'yellow-200': $phosphor-green,
+  'yellow-100': $phosphor-green,
+  'yellow-50': $phosphor-green,
+  'green-900': $phosphor-green,
+  'green-850': $phosphor-green,
+  'green-800': $phosphor-green,
+  'green-700': $phosphor-green,
+  'green-600': $phosphor-green,
+  'green-500': $phosphor-green,
+  'green-450': $phosphor-green,
+  'green-400': $phosphor-green,
+  'green-300': $phosphor-green,
+  'green-250': $phosphor-green,
+  'green-200': $phosphor-green,
+  'green-100': $phosphor-green,
+  'green-50': $phosphor-green,
+  'grey-1000': $phosphor-green,
+  'grey-900': $phosphor-green,
+  'grey-850': $phosphor-green,
+  'grey-800': $phosphor-green,
+  'grey-750': $phosphor-green,
+  'grey-700': $phosphor-green,
+  'grey-600': $phosphor-green,
+  'grey-500': #202124,
+  'grey-400': #202124,
+  'grey-350': #202124,
+  'grey-300': #202124,
+  'grey-200': #202124,
+  'grey-150': #202124,
+  'grey-100': #202124,
+  'grey-75': #202124,
+  'grey-50': #202124,
+  'orange-900': $phosphor-green,
+  'orange-800': $phosphor-green,
+  'orange-700': $phosphor-green,
+  'orange-600': $phosphor-green,
+  'orange-500': $phosphor-green,
+  'orange-400': $phosphor-green,
+  'orange-300': $phosphor-green,
+  'orange-200': $phosphor-green,
+  'orange-100': $phosphor-green,
+  'orange-50': $phosphor-green,
+  'pink-900': $phosphor-green,
+  'pink-800': $phosphor-green,
+  'pink-700': $phosphor-green,
+  'pink-600': $phosphor-green,
+  'pink-500': $phosphor-green,
+  'pink-400': $phosphor-green,
+  'pink-300': $phosphor-green,
+  'pink-200': $phosphor-green,
+  'pink-100': $phosphor-green,
+  'pink-50': $phosphor-green,
+  'purple-900': $phosphor-green,
+  'purple-800': $phosphor-green,
+  'purple-700': $phosphor-green,
+  'purple-600': $phosphor-green,
+  'purple-500': $phosphor-green,
+  'purple-400': $phosphor-green,
+  'purple-300': $phosphor-green,
+  'purple-200': $phosphor-green,
+  'purple-100': $phosphor-green,
+  'purple-50': $phosphor-green,
+  'cyan-900': $phosphor-green,
+  'cyan-800': $phosphor-green,
+  'cyan-700': $phosphor-green,
+  'cyan-600': $phosphor-green,
+  'cyan-500': $phosphor-green,
+  'cyan-400': $phosphor-green,
+  'cyan-300': $phosphor-green,
+  'cyan-200': $phosphor-green,
+  'cyan-100': $phosphor-green,
+  'cyan-50': $phosphor-green,
 );
