--- a/site/sass/globals/_extends.scss
+++ b/site/sass/globals/_extends.scss
@@ -1,5 +1,11 @@
+// Main Components
 @import 'extends/type';
 @import 'extends/cta';
 @import 'extends/blockquote';
 @import 'extends/anchor';
 @import 'extends/expanding-nav';
+
+// Phosphor Theme
+// Import this last
+@import 'extends/type.phosphor';
+@import 'extends/cta.phosphor';
