--- a/site/sass/style.scss
+++ b/site/sass/style.scss
@@ -25,11 +25,6 @@
 @import 'globals/mixins';
 @import 'globals/extends';
 
-// Phosphor Theme
-@import 'globals/colors.phosphor';
-@import 'globals/vars.phosphor';
-@import 'components/colors.phosphor';
-
 // Main Components
 @import 'components/fonts';
 @import 'components/colors';
@@ -100,3 +95,18 @@
 @import 'layouts/article';
 @import 'layouts/style-guide';
 @import 'layouts/thank-you';
+
+// Phosphor Theme
+@import 'globals/colors.phosphor';
+@import 'globals/vars.phosphor';
+@import 'components/colors.phosphor';
+@import 'components/wrapper.phosphor';
+@import 'components/card-routing.phosphor';
+@import 'components/card-subnav.phosphor';
+@import 'components/card.phosphor';
+@import 'components/external-community.phosphor';
+@import 'components/header.phosphor';
+@import 'components/stats.phosphor';
+@import 'components/search-box.phosphor';
+@import 'components/call-out.phosphor';
+@import 'components/body.phosphor';
