--- a/site/sass/globals/_colors.scss
+++ b/site/sass/globals/_colors.scss
@@ -12,6 +12,7 @@ $google-colors: (
   'blue-200': #aecbfa,
   'blue-100': #d2e3fc,
   'blue-50': #e8f0fe,
+  'blue-30': #eaf7ff,
   'blue-25': #f4f8ff,
   'red-900': #a50e0e,
   'red-800': #b31412,
@@ -22,10 +23,11 @@ $google-colors: (
   'red-500': #ea4335,
   'red-400': #ee675c,
   'red-300': #f28b82,
-  'red-200': #f6aea9,
   'red-250': #fbb4a7,
+  'red-200': #f6aea9,
   'red-100': #fad2cf,
   'red-50': #fce8e6,
+  'red-25': #ffeeeb,
   'yellow-900': #e37400,
   'yellow-800': #ea8600,
   'yellow-750': #e98622,
@@ -38,6 +40,8 @@ $google-colors: (
   'yellow-250': #ffde68,
   'yellow-200': #fde293,
   'yellow-100': #feefc3,
+  'yellow-80': #f9facb,
+  'yellow-75': #fff5d2,
   'yellow-50': #fef7e0,
   'green-900': #0d652d,
   'green-850': #1a7236,
@@ -52,6 +56,7 @@ $google-colors: (
   'green-200': #a8dab5,
   'green-100': #ceead6,
   'green-50': #e6f4ea,
+  'green-25': #ecf6ed,
   'grey-1000': #000000,
   'grey-900': #202124,
   'grey-850': #2d2d2d,
@@ -88,6 +93,7 @@ $google-colors: (
   'pink-200': #fba9d6,
   'pink-100': #fdcfe8,
   'pink-50': #fde7f3,
+  'pink-25': #ffe9f0,
   'purple-900': #681da8,
   'purple-800': #7627bb,
   'purple-700': #8430ce,
@@ -97,6 +103,7 @@ $google-colors: (
   'purple-300': #c58af9,
   'purple-200': #d7aefb,
   'purple-100': #e9d2fd,
+  'purple-75': #eaddff,
   'purple-50': #f3e8fd,
   'cyan-900': #007b83,
   'cyan-800': #098591,
