--- a/site/sass/components/_hero-animated.scss
+++ b/site/sass/components/_hero-animated.scss
@@ -77,7 +77,17 @@
     width: 100%;
 
     &--hide {
-      opacity: 0;
+      display: none;
+    }
+
+    &:last-of-type {
+      animation: none;
+      object-fit: cover;
+      transform: scale(1.92) translate(13%, 10%);
+
+      @include mq($flex-row) {
+        transform: scale(1.25) translate(15%);
+      }
     }
   }
 
