--- a/site/_components/hero.njk
+++ b/site/_components/hero.njk
@@ -14,17 +14,21 @@
  #}-->
 {% from 'icon.njk' import icon %} {% macro hero(content) -%} {% set tagSlug = content.tag | slugify %}
 <article class="hero {% if content.tag %}hero__background--{{tagSlug}}{% endif %}">
-  <section class="hero__copy-wrapper">
-    <header class="hero__header">
-      {% if content.tag %} {{icon(tagSlug, 'hero__icon')}} {% endif %}
+  <div class="wrapper--padded hero__content">
+    <section class="hero__content-wrapper">
+      {% if content.tag %}{{icon(tagSlug, 'hero__icon')}}{% endif %}
       <small class="hero__eyebrow type--eyebrow">{{content.eyebrow}}</small>
-      <h1 class="type--h1">{{content.title}}</h1>
-    </header>
-    <p class="type--h4">{{content.desc}}</p>
-    <a class="hero__link cta cta--link cta--right-icon" href="{{content.cta.url}}">{{content.cta.text}}</a>
-  </section>
-  {% for image in content.images %}
-  <img class="hero__image" src="{{image.image}}" alt="{{image.alt}}" />
-  {% endfor %}
+      <h1 class="hero__title type--h1">{{content.title}}</h1>
+
+      <p class="hero__copy type--h4">{{content.desc}}</p>
+      <a class="hero__link cta cta--link cta--right-icon" href="{{content.cta.url}}">{{content.cta.text}}</a>
+    </section>
+  </div>
+  <div class="hero__images">
+    {% for image in content.images %}
+    <img class="hero__images--image" src="{{image.image}}" alt="{{image.alt}}" />
+    {% endfor %}
+    <img class="hero__images--background-pattern" src="https://drive.google.com/uc?id=1ZKVUpomzXHbIMyWL6DqCiiKTZX6KEX2p" alt="" />
+  </div>
 </article>
 {%- endmacro %}
