--- a/site/_components/hero-animated.njk
+++ b/site/_components/hero-animated.njk
@@ -32,7 +32,8 @@
   </div>
   <div class="hero-animated__wrapper">
     <div class="hero-animated__background">
-      <img class="hero-animated__animation-item" src="{{media.placeholder.src}}" alt="{{media.placeholder.alt}}" data-static />
+      <img class="hero-animated__animation-item hero-animated__animation-item--chrome-os" src="{{media.placeholder.src}}" alt="{{media.placeholder.alt}}" data-static />
+      <img class="hero-animated__animation-item hero-animated__animation-item--phosphor" src="{{media.phosphor.src}}" alt="{{media.phosphor.alt}}" data-phosphor />
       <img class="hero-animated__animation-item hero-animated__animation-item--hide" src="{{media.static.src}}" alt="{{media.static.alt}}" data-fallback />
     </div>
     <div class="hero-animated__animation" data-wrapper></div>
