--- a/site/sass/style.scss
+++ b/site/sass/style.scss
@@ -113,5 +113,7 @@
   @import 'components/stats.phosphor';
   @import 'components/search-box.phosphor';
   @import 'components/call-out.phosphor';
+  @import 'components/nav.phosphor';
+  @import 'components/subnav.phosphor';
 }
 /* stylelint-enable no-invalid-position-at-import-rule */
