--- a/site/sass/components/_header.phosphor.scss
+++ b/site/sass/components/_header.phosphor.scss
@@ -7,7 +7,7 @@
   margin: 20px;
   padding: 0.75rem 1.25rem;
   position: fixed;
-  width: calc(100% - 40px);
+  width: calc(100vw - 40px);
   z-index: 200;
 
   @include minLangMQ($bkpt-map--header--large) {
